# shatgeist

./: .gitignore  README.md  agent_verbose.md  how_it_works.md  import_to_db.py  main.py  pyproject.toml  requirements.txt
tasks/: 1.md  2.md  3.md  4.md  5.md  6.md
