[project]
name = "chatgeist"
version = "0.4.0"
description = "Гибридный агент-аналитик для истории Telegram-чата."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy<2", # <-- ДОБАВЛЕНО ЭТО ТРЕБОВАНИЕ
    "langchain",
    "langchain-anthropic",
    "langchain-community",
    "python-dotenv",
    "aiogram",
    "sentence-transformers",
    "faiss-cpu"
]